--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css'>
 <link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
 
-<script src="inc/modernizr.custom.js" type="text/javascript" ></script>
-<script src="inc/master_functions.js" type="text/javascript"></script>
+<script src="scripts/modernizr.custom.js" type="text/javascript" ></script>
+<script src="scripts/master_functions.js" type="text/javascript"></script>
 
 </head>
 <body class="chain chain-down full-width-content" role="document">
@@ -124,11 +124,11 @@ design player audio en cours...
 <span id="text-left" class="anime">
 <img src="" alt=""></span>-->
 <article role="article" class="text">
-<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
 
-<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
 
-<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
 </article>
 </aside>
 </section>
@@ -436,10 +436,10 @@ design player audio en cours...
 </section>
 </section>
 
-<script src="inc/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
-<script src="inc/video.js" type="text/javascript"></script>
-<script src="inc/screenfull.js" type="text/javascript"></script>
-<script src="inc/retina.js" type="text/javascript"></script>
+<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
+<script src="scripts/video.js" type="text/javascript"></script>
+<script src="scripts/screenfull.js" type="text/javascript"></script>
+<script src="scripts/retina.js" type="text/javascript"></script>
 
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
