--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       -->
 
 <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css'>
+<!-- <link href="css/screen.css" media="all" rel="stylesheet" type="text/css">-->
 <link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
+<link href="css/print.css" media="print" rel="stylesheet" type="text/css">
 
 <script src="scripts/modernizr.custom.js" type="text/javascript" ></script>
 <script src="scripts/master_functions.js" type="text/javascript"></script>
