--- a/index.html
+++ b/index.html
@@ -456,9 +456,9 @@ design player audio en cours...
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-52689797-1', 'auto');
+  ga('create', 'UA-63966142-1', 'auto');
   ga('send', 'pageview');
-
+  ga(‘set’, ‘&uid’, {{USER_ID}}); 
 </script>
 
 </body>
