--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@ design player audio en cours...
 
 <!--  TODO CONTENT  Fullscreen function nav work or ? slide left -->
 <nav role="navigation" id="nav"> 
-
 <ul class="tabs">
 <li id="sign">
 <a style="display:none" href="#s-sign" id="signs" class="signs"><svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
@@ -186,8 +185,14 @@ design player audio en cours...
 <a href="#s-video" id="vids" class="vids">video</a>    
 </li>
 </ul>
-
 </nav>
+
+<!--  TODO CONTENT  Fullscreen function nav work or ? slide left 
+<a href="#" class="nav-toggle nav-toggle--open icon--menu" id="nav-open-btn"></a>
+<nav id="nav" class="nav-container" role="navigation" > 
+<a href="#" class="nav-toggle nav-toggle--close icon--close" id="nav-close-btn"></a>
+</nav>
+ -->
 
 <section class="section">
 
@@ -449,6 +454,7 @@ design player audio en cours...
 <script src="scripts/video.js" type="text/javascript"></script>
 <script src="scripts/screenfull.js" type="text/javascript"></script>
 <script src="scripts/retina.js" type="text/javascript"></script>
+<script src="scripts/device.js" type="text/javascript"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
