--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <meta name="author" lang="fr" content="laurent /signers...">
 <title>UI, UXD, Visual and Graphic Designer - /signer - Paris</title>
 <link rel='shortcut icon' href="ico/favicon.ico">
-<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-iphone.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-ipad.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-iphone-retina.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-ipad-retina.png">
+<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-iphone.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-ipad.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-iphone-retina.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-ipad-retina.png" />
 
-<meta name="description" content="UI/Visual Design, graphic designer - Paris">
-<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... " >
+<meta name="description" content="UI/Visual Design, graphic designer - Paris" />
+<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... " />
 
 <!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
 <!--  test <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
@@ -37,9 +37,9 @@
       Interaction Design, Motion Graphics, Typography, Literature... 
       -->
 
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css'>
-<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
-<link href="css/print.css" media="print" rel="stylesheet" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css' />
+<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css" />
+<link href="css/print.css" media="print" rel="stylesheet" type="text/css" />
 
 <script src="scripts/modernizr.custom.js" type="text/javascript" ></script>
 <script src="scripts/master_functions.js" type="text/javascript"></script>
