--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--<link rel="apple-touch-icon" href="">-->
 
 
-<meta name="author" lang="fr" content="laurent /signers...">
+<meta name="author" lang="fr" content="signer">
 <title>UI, UXD, Visual and Graphic Designer - /signer - Paris</title>
 <link rel='shortcut icon' href="ico/favicon.ico">
 <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-iphone.png" />
