--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ design player audio en cours...
 <figure>
 <img src="images/writings.svg" alt="Writings">
 <p>Current project writing and production</p>
+<p><a href="http://adobe.ly/1RuMvWv" rel="external" >adobe.ly/1RuMvWv</a> </p>
 </figure>
 
 <aside id="press">
