--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 
 <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css' />
 <link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css" />
+<link href="css/typography.css" media="all" rel="stylesheet" type="text/css" />
+<link href="css/video-js.css" media="all" rel="stylesheet" type="text/css" />
 <link href="css/print.css" media="print" rel="stylesheet" type="text/css" />
 
 <script src="scripts/master_functions.js" type="text/javascript"></script>
-<script src="scripts/video.js" type="text/javascript"></script>
 <script src="scripts/retina.js" type="text/javascript"></script>
 
 
@@ -456,6 +457,7 @@ design player audio en cours...
 <script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 <script src="scripts/screenfull.js" type="text/javascript"></script>
 <script src="scripts/device.js" type="text/javascript"></script>
+<script src="scripts/video.js" type="text/javascript"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
