Add orders bottom
Add orders bottom

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ design player audio en cours...
 </svg></a>
 </li>
 <li id="text">
-<a style="display:none" href="#content" id="txt" class="txt">text</a>  
+<a style="display:none" href="#s-text" id="txt" class="txt">text</a>  
 <a href="#content" id="texts" class="texts">text</a>  
 </li>
 <li id="lit">
@@ -206,12 +206,15 @@ design player audio en cours...
 <section class="page">
 <div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 <figure></figure>
+<article>
+<h2>0</h2>
+</article>
 </section>
 
 <section class="page">
 <figure></figure>
 <article>
-<h2>1</h2>
+<h2>0</h2>
 </article>
 </section>
 
@@ -280,24 +283,84 @@ design player audio en cours...
 </section>
 </section>
 
-
-<section id="content" class="tab_content">
 <!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
 
-<!-- 
-<article role="article" class="-box" >
- <ul class="org-menu">
-<li>
-<img src="images/motif.png" class="attachment-box img" alt="">
-<figure class="org-icon"></figure>
-</li>           
-</ul>
-<h3>Organics</h3>	
-<p>Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices...</p>		
-</article>
--->
+<section id="s-text" class="tab_content">
 
+<!--  TODO CONTENT  color graphic experience -->
+
+<section class="page">
+<div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+<figure></figure>
+<article>
+<h2>1</h2>
+</article>
 </section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>2</h2>
+</article>
+</section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>3</h2>
+</article>
+</section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>4</h2>
+</article>
+</section>
+
+<section  class="page">
+<figure></figure>
+<article>
+<h2>5</h2>
+</article>
+</section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>6</h2>
+</article>
+</section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>7</h2>
+</article>
+</section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>8</h2>
+</article>
+</section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>9</h2>
+</article>
+</section>
+
+<section class="page">
+<figure></figure>
+<article>
+<h2>10</h2>
+</article>
+</section>
+</section>
+
 
 <section id="s-liter"  class="tab_content">
 
@@ -307,7 +370,7 @@ design player audio en cours...
 <div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 <figure></figure>
 <article>
-<h2>1</h2>
+<h2>2</h2>
 </article>
 </section>
 
@@ -385,7 +448,7 @@ design player audio en cours...
 <div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 <figure></figure>
 <article>
-<h2>1</h2>
+<h2>3</h2>
 </article>
 </section>
 
