--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				
 				<p>Current project writing and production</p>
 				
-				<p><a href="http://adobe.ly/1RkR3s2" rel="external" >adobe.ly/2xmTEje</a></p>
+				<p><a href="https://adobe.ly/2vwi9xT" rel="external">adobe.ly/2vwi9xT</a></p>
 			</figure>
 			
 			<aside id="press">
