--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				
 				<p>Current project writing and production</p>
 				
-				<p><a href="https://indd.adobe.com/view/41a5826b-bb77-41a0-b772-e8c9e8d8d64a" rel="external">adobe.ly/2vwi9xT</a></p>
+				<p><a href="https://indd.adobe.com/view/41a5826b-bb77-41a0-b772-e8c9e8d8d64a" rel="external">SAMPLES</a></p>
 			</figure>
 			
 			<aside id="press">
