--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 	<title>UI, UXD, Visual and Graphic Designer - /signer - Paris</title>
 	
-	<link rel='shortcut icon' href="ico/favicon.ico">
+	<link rel="shortcut icon" href="ico/favicon.ico">
 	
 	<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-iphone.png" />
 	
@@ -57,7 +57,7 @@
 	      Interaction Design, Motion Graphics, Typography, Literature... 
 	      -->
 	
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css' />
+	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css" />
 	
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css" />
 	
