--- a/index.html
+++ b/index.html
@@ -41,8 +41,29 @@
 	
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-ipad-retina.png" />
 	
-	<meta name="description" content="UI/Visual Design, graphic designer - Paris" />
+    <!-- 	
+    
+    <link rel="apple-touch-icon" sizes="60x60" href="co/apple-icon-60x60.png" />
 	
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="ico/apple-icon-76x76.png" />
+
+	<link rel="apple-touch-icon-precomposed"" sizes="120x120" href="ico/apple-icon-120x120.png" />
+
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="ico/apple-icon-152x152.png" />
+	
+	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="ico/apple-icon-180x180.png" />
+	
+	<link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png" />
+	
+	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png" />
+	
+	<link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png" />
+	
+	<link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png" />
+	
+    -->	
+	
+	<meta name="description" content="UI/Visual Design, graphic designer - Paris" />
 	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... " />
 	
 	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
