--- a/inc/tigerlily/index.html
+++ b/inc/tigerlily/index.html
@@ -114,7 +114,7 @@
 	
 <div style="clear:left;position:absolute;top:100%; width:100%;text-align:center;padding:20px 0">			
 	<p><img style="width:80%;" src="images/mobile.png" alt="" /><br /><br />
-	<a href="http://signers.github.com/_paris-designers-stuff/tigerlily/mobile/index.html">inc/tigerlily/mobile/</a></p>
+	<a href="http://signers.github.com/_paris-designers-stuff/inc/tigerlily/mobile/index.html">/inc/tigerlily/mobile/</a></p>
 </div>
 
 <!-- / contrôles coté server pour le formulaire à développer, Temps utilisé pour le test 3 heures à minima... +++-->	
