--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
 	<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-iphone.png">
 	
-	<link rel="apple-touch-icon" sizes="60x60" href="co/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png">
 
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-ipad.png">
 	
