--- a/index.html
+++ b/index.html
@@ -358,9 +358,13 @@
 			<section class="page">
 			<figure></figure>
 				
-				<article>
-					<h2>2</h2>
-				</article>
+                <aside>
+                    <article>
+                        <h2>02</h2>
+                    </article>
+                    <img src="images/img-atte-lle.png" alt="Fetish">
+                        <img src="images/img-atte-lle.png" alt="Fetish">
+                    </aside>
 			</section>
 			
 			<section class="page">
