PARAM CONTENT SE

--- a/index.html
+++ b/index.html
@@ -167,26 +167,25 @@
 	
 	<section id="s-sign">
 
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 		<figure></figure>
 		
 		<article>
 			<h2>01</h2>
-		</article>
-	</aside>
-		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 			
-		<figure></figure>
-		
-		<article>
-			<h2>02</h2>
 		</article>
+</aside>
 		
+		<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+
+		<figure></figure>	
+	<article>
+			<h2>02</h2>
+    </article>
 		</aside>
-		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+
+		<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><div><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 		<figure></figure>
 		
@@ -200,7 +199,7 @@
 	
 	<section id="s-text" class="tab_content">
 
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 		<figure></figure>
 		
@@ -209,7 +208,7 @@
 		</article>
 	</aside>
 		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+		<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 		<figure></figure>
 		
@@ -219,7 +218,7 @@
 		
 		</aside>
 		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+		<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 		<figure></figure>
 		
@@ -232,7 +231,7 @@
 	
 	<section id="s-liter"  class="tab_content">
 
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 		<figure></figure>
 		
@@ -241,7 +240,7 @@
 		</article>
 	</aside>
 		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+		<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 		<figure></figure>
 		
@@ -251,7 +250,7 @@
 		
 		</aside>
 		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+		<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 		<figure></figure>
 		
@@ -263,8 +262,7 @@
 	</section>
 	
 	<section id="s-video"  class="tab_content">
-
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 		<figure></figure>
 		
@@ -273,18 +271,17 @@
 		</article>
 	</aside>
 		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-			
+	<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+
 		<figure></figure>
 		
-		<article>
+	    <article>
 			<h2>00002</h2>
 		</article>
 		
-		</aside>
+	</aside>
+		<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
-		<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-			
 		<figure></figure>
 		
 		<article>
@@ -293,7 +290,6 @@
 		
 		</aside>
 	</section>
-	
 </section>
 
 	
