--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 	</nav>
 	
 	<section id="s-sign">
-	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 	<figure></figure>
 		
@@ -197,7 +197,7 @@
 	</section>
 	
 	<section id="s-text" class="tab_content">
-	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 	<figure></figure>
 		
@@ -206,7 +206,7 @@
 	</article>
 	</aside>
 		
-	<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 	<figure></figure>
 		
@@ -215,7 +215,7 @@
 	</article>
 	</aside>
 		
-	<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 	<figure></figure>
 		
@@ -227,7 +227,7 @@
 	</section>
 	
 	<section id="s-liter"  class="tab_content">
-	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 	<figure></figure>
 		
@@ -236,7 +236,7 @@
 	</article>
 	</aside>
 		
-	<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 	<figure></figure>
 		
@@ -245,7 +245,7 @@
 	</article>
 	</aside>
 		
-	<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 			
 	<figure></figure>
 		
@@ -257,7 +257,7 @@
 	</section>
 	
 	<section id="s-video"  class="tab_content">
-	<aside class="pages"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
 	<figure></figure>
 		
@@ -266,7 +266,7 @@
 	</article>
 	</aside>
 		
-	<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 
 	<figure></figure>
 		
@@ -275,7 +275,7 @@
 	</article>
 	</aside>
 
-	<aside class="pages"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 		
 	<figure></figure>
 		
