UP CONTENT BOTTOM +1
UP CONTENT BOTTOM +1

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 				</ul>
 			</article>
 		</aside>
-	</section>
+</section>
 	
-	<section class="head" id="rules">
+<section class="head" id="rules">
 		<header role="banner">
 			<ul id="video" class="request">
 				<li><a id="vim" class="vim">
@@ -107,7 +107,7 @@
 			</ul>
 		</header>
 		
-		<section class="inner">
+<section class="inner">
 			<figure>
 				<img src="images/writings.svg" alt="Writings">				
 				<p>Current project writing and production</p>
@@ -123,13 +123,14 @@
 					<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
 				</article>
 			</aside>
-		</section>
+</section>
 		
-		<section id="switch-navigation">
+<section id="switch-navigation">
 			<section class="inner"></section>
 		</section>
-	</section>
-	<section id="section">
+</section>
+
+<section id="section">
 	<nav role="navigation" id="nav">
 		<ul class="tabs">
 			<li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
@@ -163,128 +164,81 @@
 			<li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">video</a> 
 				<a href="#s-video" id="vids" class="vids">video</a></li>
 		</ul>
-	</nav>
-	
-	<section id="s-sign">
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+	  </nav>
+</section>
+
+<section id="s-sign">
+	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
-	<figure></figure>
-		
-	<article>
+	      <figure><h1>01</h1></figure>
+	      <article>
 			<h2>01</h2>
-			
-	</article>
-    </aside>
+	      </article>
+        </aside>
+
+	    <aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><div><img src="images/img-atte-lle.png" alt="Sun"></div>
+	
+	      <figure><h1>01</h1></figure>
+	      <article>
+			<h2>011</h2>
+	      </article>
+	</aside>
+</section>
+	
+<section id="s-text" class="tab_content">
+	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
-		<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-
-	<figure></figure>	
-
-	<article>
+	     <figure><h1>02</h1></figure>
+	      <article>
 			<h2>02</h2>
-    </article>
-	</aside>
-
-	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><div><img src="images/img-atte-lle.png" alt="Sun"></div>
-			
-	<figure></figure>
+	      </article>
+	    </aside>
 		
-	<article>
+	    <aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+			
+	     <figure><h1>02</h1></figure>
+	      <article>
+			<h2>022</h2>
+	      </article>
+	    </aside>
+		
+</section>
+	
+<section id="s-liter"  class="tab_content">
+	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+		
+	     <figure><h1>03</h1></figure>
+	     <article>
 			<h2>03</h2>
-	</article>
+	     </article>
+	    </aside>
 		
-	</aside>
-	</section>
+	    <aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
+			
+	      <figure><h1>03</h1></figure>
+	     <article>
+			<h2>033</h2>
+	     </article>
+	    </aside>
+		
+</section>
 	
-	<section id="s-text" class="tab_content">
+<section id="s-video"  class="tab_content">
 	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 		
-	<figure></figure>
-		
+	 <figure><h1>04</h1></figure>
 	<article>
-			<h2>001</h2>
-	</article>
-	</aside>
-		
-	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-			
-	<figure></figure>
-		
-	<article>
-			<h2>002</h2>
-	</article>
-	</aside>
-		
-	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-			
-	<figure></figure>
-		
-	<article>
-			<h2>003</h2>
-	</article>
-		
-	</aside>
-	</section>
-	
-	<section id="s-liter"  class="tab_content">
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-		
-	<figure></figure>
-		
-	<article>
-			<h2>0001</h2>
-	</article>
-	</aside>
-		
-	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-			
-	<figure></figure>
-		
-	<article>
-			<h2>0002</h2>
-	</article>
-	</aside>
-		
-	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-			
-	<figure></figure>
-		
-	<article>
-			<h2>0003</h2>
-	</article>
-	
-	</aside>
-	</section>
-	
-	<section id="s-video"  class="tab_content">
-	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-		
-	<figure></figure>
-		
-	<article>
-			<h2>00001</h2>
-	</article>
-	</aside>
-		
-	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-
-	<figure></figure>
-		
-    <article>
-			<h2>00002</h2>
+			<h2>04</h2>
 	</article>
 	</aside>
 
 	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
 		
-	<figure></figure>
-		
+	 <figure><h1>04</h1></figure>
 	<article>
-	      <h2>00003</h2>
+	      <h2>044</h2>
 	</article>
-		
 	</aside>
-	</section>
 
 </section>
 
