--- a/index.html
+++ b/index.html
@@ -44,8 +44,24 @@
 	
 	<script src="scripts/master_functions.js" type="text/javascript"></script>
 	<script src="scripts/retina.js" type="text/javascript"></script>
-	
 </head>
+
+	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
+	<!--  test <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
+	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
+	<!--  TODO -->
+	<!--  (ABC-book, type, lettering, visual identity...)
+	      POESIES III
+	      Current project writing and production.
+	      Processing: abstract letters, texts, videos (26)...
+	      Interaction Design, Motion Graphics, Typography, Literature... 
+	      -->
+	<!--  TODO CONTENT -->
+	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
+	<!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
+	<!--  TODO CONTENT  color graphic experience video background motion graphics -->
+	
+
 
 <body class="chain chain-down full-width-content" role="document">
 	<section id="block-video">
@@ -247,34 +263,7 @@
 	<script src="scripts/device.js" type="text/javascript"></script>
 	<script src="scripts/video.js" type="text/javascript"></script>
 	
-	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
-	<!--  test <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
-	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
-	<!--  TODO -->
-	<!--  (ABC-book, type, lettering, visual identity...)
-	      POESIES III
-	      Current project writing and production.
-	
-	      Processing: abstract letters, texts, videos (26)...
-	      Interaction Design, Motion Graphics, Typography, Literature... 
-	      -->
-	
-	
-	<!--  TODO CONTENT -->
-	<!--  TODO CONTENT  Fullscreen function nav work or ? slide left -->
-	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo, flickr, sketchfab... -->
-	
-	<!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
-	<!--  TODO CONTENT  color graphic experience -->
-	<!--  TODO CONTENT  color graphic experience -->
-	<!--  TODO CONTENT  video background motion graphics-->
 
-	<!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
-	<!--  TODO CONTENT  color graphic experience -->
-	<!--  TODO CONTENT  color graphic experience -->
-	<!--  TODO CONTENT  video background motion graphics-->
-
-<!--  
 <script>
   (function(i, s, o, g, r, a, m) {
 i['GoogleAnalyticsObject'] = r;
@@ -289,7 +278,7 @@ m.parentNode.insertBefore(a, m)
 })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 ga('create', 'UA-80193142-1', 'auto');
 ga('send', 'pageview');
-	</script>
--->	
+</script>
+
 </body>
 </html>
