--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			<figure>
 				<img src="images/writings.svg" alt="Writings">				
 				<p>Current project writing and production</p>
-				<p><a href="https://adobe.ly/2HDmeCl" rel="external">adobe.ly/2HDmeCl</a></p>
+				<p><a href="https://adobe.ly/2DijkDm" rel="external">adobe.ly/2DijkDm</a></p>
 			</figure>
 			
 			<aside id="press">
