--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7 ]> <html class="ie ie7"> <![endif]-->
 <!--[if IE 8 ]> <html class="ie ie8"> <![endif]-->
 <!--[if IE 9 ]> <html class="ie ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> 
+<!--[if (gt IE 9)|!(IE)]><!-->
 
 <html  lang="fr_FR"> <!--<![endif]-->
   <head>
@@ -11,13 +11,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	
+
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="author" lang="fr" content="signer">
-	
+
 	<title>UI, UXD, Visual and Graphic Designer - /signer - Paris</title>
-	
+
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png">
@@ -31,19 +31,19 @@
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="ico/apple-icon-152x152.png">
 	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="ico/apple-icon-180x180.png">
 	<link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
-	
+
 	<meta name="description" content="UI/Visual Design, graphic designer - Paris">
 	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
-	
+
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css">
-		
+
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/typography.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/video-js.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/print.css" media="print" rel="stylesheet" type="text/css">
-	
+
 	<script src="scripts/master_functions.js" type="text/javascript"></script>
-	<script src="scripts/retina.js" type="text/javascript"></script>	
+	<script src="scripts/retina.js" type="text/javascript"></script>
 </head>
 
 	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
@@ -55,13 +55,13 @@
 	      POESIES III
 	      Current project writing and production.
 	      Processing: abstract letters, texts, videos (26)...
-	      Interaction Design, Motion Graphics, Typography, Literature... 
+	      Interaction Design, Motion Graphics, Typography, Literature...
 	      -->
 	<!--  TODO CONTENT -->
 	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
 	<!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
 	<!--  TODO CONTENT  color graphic experience video background motion graphics -->
-	
+
 
 
 <body class="chain chain-down full-width-content" role="document">
@@ -77,7 +77,7 @@
 			<label for="button-3" class="sp-arrow sp-a3"></label>
 			<label for="button-4" class="sp-arrow sp-a4"></label>
 			<label for="button-5" class="sp-arrow sp-a5"></label>
-			
+
 			<article class="sp-content">
 				<ul class="sp-slider clearfix">
 					<li>
@@ -99,7 +99,7 @@
 			</article>
 		</aside>
 </section>
-	
+
 <section class="head" id="rules">
 		<header role="banner">
 			<ul id="video" class="request">
@@ -117,31 +117,31 @@
 				</a></li>
 				<li><a id="vims" class="vims">Hide this content</a></li>
 			</ul>
-			
+
 			<ul id="think" class="request">
 				<li><a id="tree" class="tree">Preparatory video</a></li>
 				<li><a id="trees" class="trees">Hide this content</a></li>
 			</ul>
 		</header>
-		
+
 <section class="inner">
 			<figure>
-				<img src="images/writings.svg" alt="Writings">				
+				<img src="images/writings.svg" alt="Writings">
 				<p>Current project writing and production</p>
 				<p><a href="https://adobe.ly/2DijkDm" rel="external">adobe.ly/2DijkDm</a></p>
 			</figure>
-			
+
 			<aside id="press">
 				<article role="article" class="text">
 					<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
-					
+
 					<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
-					
+
 					<p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
 				</article>
 			</aside>
 </section>
-		
+
 <section id="switch-navigation">
 			<section class="inner"></section>
 		</section>
@@ -161,7 +161,7 @@
 						</g>
 					</g>
 				</svg>
-				</a>  
+				</a>
 				<a href="#s-sign" id="signers" class="signers">
 					<svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
 					 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
@@ -174,11 +174,11 @@
 						</g>
 					</svg>
 			</a></li>
-			<li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">text</a>  
+			<li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">text</a>
 				<a href="#content" id="texts" class="texts">text</a></li>
-			<li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">liter</a>  
+			<li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">liter</a>
 				<a href="#s-liter" id="liters" class="liters">liter</a></li>
-			<li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">video</a> 
+			<li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">video</a>
 				<a href="#s-video" id="vids" class="vids">video</a></li>
 		</ul>
 	  </nav>
@@ -186,71 +186,71 @@
 
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-		
+
 	      <figure><h1>01</h1></figure>
 	      <article>
 			<h2>01</h2>
 	      </article>
         </aside>
 
-	    <aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><div><img src="images/img-atte-lle.png" alt="Sun"></div>
-	
+	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>
+
 	      <figure><h1>01</h1></figure>
 	      <article>
 			<h2>011</h2>
 	      </article>
 	</aside>
 </section>
-	
+
 <section id="s-text" class="tab_content">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-		
+
 	     <figure><h1>02</h1></figure>
 	      <article>
 			<h2>02</h2>
 	      </article>
 	    </aside>
-		
-	    <aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-			
+
+	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>
+
 	     <figure><h1>02</h1></figure>
 	      <article>
 			<h2>022</h2>
 	      </article>
 	    </aside>
-		
+
 </section>
-	
+
 <section id="s-liter"  class="tab_content">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-		
+
 	     <figure><h1>03</h1></figure>
 	     <article>
 			<h2>03</h2>
 	     </article>
 	    </aside>
-		
-	    <aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-			
+
+	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>>
+
 	      <figure><h1>03</h1></figure>
 	     <article>
 			<h2>033</h2>
 	     </article>
 	    </aside>
-		
+
 </section>
-	
+
 <section id="s-video"  class="tab_content">
 	<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-		
+
 	 <figure><h1>04</h1></figure>
 	<article>
 			<h2>04</h2>
 	</article>
 	</aside>
 
-	<aside class="page"><div><img src="images/img-atte-lle.png" alt="Sun"><img src="images/img-atte-lle.png" alt="Sun"></div>
-		
+	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>
+
 	 <figure><h1>04</h1></figure>
 	<article>
 	      <h2>044</h2>
@@ -263,7 +263,7 @@
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
 	<script src="scripts/video.js" type="text/javascript"></script>
-	
+
 <script>
   (function(i, s, o, g, r, a, m) {
 i['GoogleAnalyticsObject'] = r;
