--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
 	<!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
 	<!--  TODO CONTENT  color graphic experience video background motion graphics -->
 
-
-
 <body class="chain chain-down full-width-content" role="document">
 	<section id="block-video">
 		<aside id="strip">
@@ -128,7 +126,7 @@
 			<figure>
 				<img src="images/writings.svg" alt="Writings">
 				<p>Current project writing and production</p>
-				<p><a href="https://adobe.ly/2DijkDm" rel="external">adobe.ly/2DijkDm</a></p>
+				<p><a href="https://bit.ly/2xfQOBV" rel="external">bit.ly/2xfQOBV</a></p>
 			</figure>
 
 			<aside id="press">
@@ -193,7 +191,7 @@
 	      </article>
         </aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>
+	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
 
 	      <figure><h1>01</h1></figure>
 	      <article>
@@ -211,7 +209,7 @@
 	      </article>
 	    </aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>
+	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
 
 	     <figure><h1>02</h1></figure>
 	      <article>
@@ -230,7 +228,7 @@
 	     </article>
 	    </aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>>
+	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>>
 
 	      <figure><h1>03</h1></figure>
 	     <article>
@@ -249,7 +247,7 @@
 	</article>
 	</aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/LLE-III-30-40-00.png" alt="Sun"></div>
+	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
 
 	 <figure><h1>04</h1></figure>
 	<article>
@@ -263,22 +261,6 @@
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
 	<script src="scripts/video.js" type="text/javascript"></script>
-
-<script>
-  (function(i, s, o, g, r, a, m) {
-i['GoogleAnalyticsObject'] = r;
-i[r] = i[r] || function() {
-(i[r].q = i[r].q || []).push(arguments)
-}, i[r].l = 1 * new Date();
-a = s.createElement(o),
-	m = s.getElementsByTagName(o)[0];
-a.async = 1;
-a.src = g;
-m.parentNode.insertBefore(a, m)
-})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-ga('create', 'UA-80193142-1', 'auto');
-ga('send', 'pageview');
-</script>
 
 </body>
 </html>
