--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<figure>
 				<img src="images/writings.svg" alt="Writings">
 				<p>Current project writing and production</p>
-				<p><a href="https://bit.ly/2xfQOBV" rel="external">bit.ly/2xfQOBV</a></p>
+				<p><a href="https://bit.ly/39iBn9o" rel="external">bit.ly/39iBn9o</a></p>
 			</figure>
 
 			<aside id="press">
