--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<figure>
 				<img src="images/writings.svg" alt="Writings">
 				<p>Current project writing and production</p>
-				<p><a href="https://bit.ly/39iBn9o" rel="external">bit.ly/39iBn9o</a></p>
+				<p><a href="https://adobe.ly/2BpJu9i" rel="external">adobe.ly/2BpJu9i</a></p>
 			</figure>
 
 			<aside id="press">
