--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 	     </article>
 	    </aside>
 
-	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>>
+	    <aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>
 
 	      <figure><h1>03</h1></figure>
 	     <article>
