--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<script src="scripts/retina.js" type="text/javascript"></script>
 </head>
 
-	<!--  test TEST <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
+	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
 	<!--  test <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
 	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
 
