--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="author" lang="fr" content="signer">
+	<meta name="author" lang="fr-FR" content="signer">
 
 	<title>UI, UXD, Visual and Graphic Designer - /signer - Paris</title>
 
