--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="author" lang="fr-FR" content="signer">
 
-	<title>UXD</title>
+	<title>UXD, Visual and Graphic Designer - /signer - Paris</title>
 
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
