--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="ico/apple-icon-152x152.png">
 	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="ico/apple-icon-180x180.png">
 	<link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
-
+  
 	<meta name="description" content="UI/Visual Design, graphic designer - Paris">
 	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
-
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css">
 
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
@@ -43,7 +42,7 @@
 	<link href="css/print.css" media="print" rel="stylesheet" type="text/css">
 
 	<script src="scripts/master_functions.js" type="text/javascript"></script>
-	<script src="scripts/retina.js" type="text/javascript"></script>
+	<script src="scripts/retina.min.js" type="text/javascript"></script>
 </head>
 
 	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
