--- a/index.html
+++ b/index.html
@@ -50,16 +50,18 @@
 	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
 
 	<!--  TODO -->
-	<!--  (ABC-book, type, lettering, visual identity...)
+	<!--
 	      POESIES III
 	      Current project writing and production.
 	      Processing: abstract letters, texts, videos (26)...
+              Digital Cinema
 	      Interaction Design, Motion Graphics, Typography, Literature...
 	      -->
 	<!--  TODO CONTENT -->
 	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
 	<!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
 	<!--  TODO CONTENT  color graphic experience video background motion graphics -->
+        <!--  TODO CONTENT  digital Cinema (RED, ZEISS, COOKE, APPLE, NEUMANN, ZOOM, APUTURE) -->
 
 <body class="chain chain-down full-width-content" role="document">
 	<section id="block-video">
