--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 
 <section class="inner">
 			<figure>
-				<img src="images/writings.svg" alt="Writings">
-				<p>Current project writing and production</p>
-				<p><a href="" rel="external"><br /></a></p>
+				<p><img src="images/writings.svg" alt="Writings"></p>
+                                <p>Current project writing and production</p>
+				<p><a href="https://f.io/g99knOOy" rel="external"><br />f.io/g99knOOy</a></p>
 			</figure>
 
 			<aside id="press">
