--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<figure>
 				<p><img src="images/writings.svg" alt="Writings"></p>
                                 <p>Current project writing and production</p>
-				<p><a href="https://f.io/aEA5Ux4y" rel="external"><br />f.io/aEA5Ux4y</a></p>
+				<p><a href="https://f.io/NPpIoZL9" rel="external"><br />f.io/NPpIoZL9</a></p>
 			</figure>
 
 			<aside id="press">
