--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
-	<script src="scripts/video.js" type="text/javascript"></script>
+	<script src="scripts/video.js" type="text/javascript"></script> 
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e89c73a07e624b6f991a6bb6805343f4"}'></script>
 
 </body>
 </html>
