--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 	      </article>
         </aside>
 
-	     <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
-       <aside class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+	    <!--<aside class="page"><div><img class="tempo" src="images/motif.png" alt="Sun"></div>-->
+       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
 	      <figure><h1>01</h1></figure>
 	      <article>
