--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
 	<!--
 	      POESIES III
 	      Current project writing and production.
-	      Processing: abstract letters, texts, videos (26)...
-              Digital Cinema
-	      Interaction Design, Motion Graphics, Typography, Literature...
+              Digital Cinema Industry
+	      Interaction Design, Typography, Literature...
 	      -->
 	<!--  TODO CONTENT -->
 	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
