--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
   
 	<meta name="description" content="UI/Visual Design, graphic designer - Paris">
-	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
+	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C R3D... ">
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css">
 
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
