--- a/index.html
+++ b/index.html
@@ -192,18 +192,28 @@
         </aside>
 
    <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+
+        <article id="desc">
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+            </p>
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+            </p>
+        </article>
          <article class="blanc">
              <p>master juillet project 23/24 <br />
              <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
              <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
+             </p>
          </article>
+
 
 	      <figure><h1>01</h1></figure>
 	      <article>
 			<h2>011</h2>
 	      </article>
 	</aside>
+
 </section>
 
 <section id="s-text" class="tab_content">
@@ -216,13 +226,19 @@
 	    </aside>
 
       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+        <article id="desc">
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+            </p>
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+            </p>
+        </article>
          <article class="blanc">
              <p>master juillet project 23/24 <br />
              <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
              <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
+             </p>
          </article>
-
 
 
 	     <figure><h1>02</h1></figure>
@@ -243,14 +259,19 @@
 	    </aside>
 
       <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+        <article id="desc">
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+            </p>
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+            </p>
+        </article>
          <article class="blanc">
              <p>master juillet project 23/24 <br />
              <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
              <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
+             </p>
          </article>
-
-
 
 	      <figure><h1>03</h1></figure>
 	     <article>
@@ -270,13 +291,19 @@
 	</aside>
 
   <aside id="sec" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-         <article class="blanc">
-             <p>master juillet project 23/24 <br />
-             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a></p>
-         </article>
-
+    <article id="desc">
+        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+        </p>
+        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+        </p>
+    </article>
+     <article class="blanc">
+         <p>master juillet project 23/24 <br />
+         <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+         <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+         <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
+         </p>
+     </article>
 
 	 <figure><h1>04</h1></figure>
 	<article>
@@ -285,7 +312,6 @@
 	</aside>
 
 </section>
-
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
